apex-libraries/sfdx-source/at4dx/main/schema/objects/AT4DXMessage__e/AT4DXMessage__e.object-meta.xml
<CustomObject>
    <description>The high volume platform event bus for managing AT4DX messages the org.</description>
    <label>AT4DX Message</label>
    <pluralLabel>AT4DX Messages</pluralLabel>
</CustomObject>