apex-libraries/sfdx-source/at4dx/main/schema/objects/AT4DXMessage__e/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description
    >Specifies a division of the universal bus, which enables more precise matching.  Normally this field will contain the SObject name related to the event, e.g. Account, Opportunity, etc.</description>
    <label>Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>