apex-libraries/sfdx-source/at4dx/main/schema/objects/AT4DXMessage__e/fields/Payload__c.field-meta.xml
<CustomField>
    <fullName>Payload__c</fullName>
    <description>The JSON payload encapsulating all of the information for the event.</description>
    <label>Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>